# xwebrtc

./: .appveyor.yml  .appveyor.yml.orig  .gitignore  .travis.yml  .travis.yml.orig  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  README.md  README.md.orig  environment.yml  xwebrtcConfig.cmake.in
include/xwebrtc/: xaudio_recorder.hpp  xaudio_stream.hpp  xcamera_stream.hpp  xchat.hpp  ximage_recorder.hpp  ximage_stream.hpp  xmedia_stream.hpp  xpeer.hpp  xrecorder.hpp  xroom.hpp  xroom_local.hpp  xroom_mqtt.hpp  xvideo_recorder.hpp  xvideo_stream.hpp  xwebrtc_config.hpp  xwebrtc_config_cling.hpp.in  xwidget_stream.hpp
notebooks/: AudioRecorder.ipynb  AudioStream.ipynb  CameraStream.ipynb  CameraStream_xtensor_fftw.ipynb  Chat.ipynb  ImageRecorder.ipynb  VideoRecorder.ipynb  VideoStream.ipynb  xwebrtc-xtensor-fftw.ipynb  xwebrtc.ipynb
src/: xaudio_recorder.cpp  xaudio_stream.cpp  xcamera_stream.cpp  ximage_recorder.cpp  ximage_stream.cpp  xmedia_stream.cpp  xpeer.cpp  xrecorder.cpp  xroom.cpp  xroom_local.cpp  xroom_mqtt.cpp  xvideo_recorder.cpp  xvideo_stream.cpp  xwidget_stream.cpp
test/: CMakeLists.txt  test_fake.cpp
